fix(core): `Hint` fix dark mode colors

--- a/projects/core/directives/hint/hint.style.less
+++ b/projects/core/directives/hint/hint.style.less
@@ -40,8 +40,8 @@
     }
 
     &[data-appearance='dark'] {
-        background: var(--tui-background-accent-opposite-hover);
-        color: var(--tui-background-base);
+        background: var(--tui-background-elevation-1);
+        color: var(--tui-text-primary);
         filter: drop-shadow(0 0 0.125rem rgba(0, 0, 0, 0.16)) drop-shadow(0 1.5rem 1rem rgba(0, 0, 0, 0.03))
             drop-shadow(0 0.75rem 0.75rem rgba(0, 0, 0, 0.04)) drop-shadow(0 0.25rem 0.375rem rgba(0, 0, 0, 0.05));
     }
